<resources>
    <string name="app_name">FM Tracker</string>
    <string name="e_mail">E-Mail</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="zero">0</string>
    <string name="trophy_name">Trophy Name</string>
    <string name="country_flag">Country Flag</string>
    <string name="trophy_logo">Trophy Image</string>
    <string name="trophy_cabinet">Trophy Cabinet</string>
    <string name="create_league">Create League</string>
    <string name="team_name">Team Name</string>
    <string name="country_code">Country Code</string>
    <string name="type">Type</string>
    <string name="create_competition">Create Competition</string>
    <string name="create_team">Create Team</string>
    <string name="all_teams">All Teams</string>
</resources>