<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateLeagueActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_league"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" >

        <EditText
            android:id="@+id/teamNameET"
            android:layout_width="match_parent"
            android:layout_height="64sp"
            android:ems="24"
            android:inputType="text"
            android:hint="@string/team_name" />
        <EditText
            android:id="@+id/CountryCodeET"
            android:layout_width="match_parent"
            android:layout_height="64sp"
            android:ems="24"
            android:inputType="text"
            android:hint="@string/country_code" />

        <Button
            android:id="@+id/createCompButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_team" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>